Actualizando swagger y respuestas de servicios
